--- a/config/ros.org/rqt_gui.ini
+++ b/config/ros.org/rqt_gui.ini
@@ -11,7 +11,7 @@ perspectives=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\x1e\0@\0r\0q\0t\0_\0p\0l\0
 %40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\autoscroll=true
 %40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\plot_type=1
 %40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\topics=/turtle1/pose/x, /turtle1/pose/y
-%40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\x_limits=25.44173550605774, 26.44173550605774
+%40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\x_limits=18.089356422424316, 19.089356422424316
 %40rqt_plot__Plot\pluginmanager\plugin__rqt_plot__Plot__0\plugin\y_limits=0, 9.54443645477295
 %40rqt_plot__Plot\pluginmanager\running-plugins=@Variant(\0\0\0\b\0\0\0\x1\0\0\0\x1a\0r\0q\0t\0_\0p\0l\0o\0t\0/\0P\0l\0o\0t\0\0\0\t\0\0\0\x1\0\0\0\x2\0\0\0\0)
 
@@ -50,3 +50,37 @@ perspectives=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\x1e\0@\0r\0q\0t\0_\0p\0l\0
 -3471804700802901082\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_top=/opt/ros/noetic/share/rqt_top/plugin.xml
 -3471804700802901082\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_topic=/opt/ros/noetic/share/rqt_topic/plugin.xml
 -3471804700802901082\discovery_timestamp=1752121763.3939815
+8673899283335950835\discovery_data\qt_gui_cpp.RosPluginlibPluginProvider\qt_gui%20qt_gui_cpp%3A%3APlugin=/opt/ros/noetic/share/rqt_web/plugin.xml, /opt/ros/noetic/share/qt_gui_cpp/plugin.xml, /opt/ros/noetic/share/rqt_shell/plugin.xml, /opt/ros/noetic/share/rqt_py_console/plugin.xml, /opt/ros/noetic/share/rqt_dep/plugin.xml, /opt/ros/noetic/share/rqt_gui_cpp/plugin.xml
+8673899283335950835\discovery_data\qt_gui_cpp.RosPluginlibPluginProvider\qt_gui%20qt_gui_cpp%3A%3APluginProvider=/opt/ros/noetic/share/rqt_web/plugin.xml, /opt/ros/noetic/share/qt_gui_cpp/plugin.xml, /opt/ros/noetic/share/rqt_shell/plugin.xml, /opt/ros/noetic/share/rqt_py_console/plugin.xml, /opt/ros/noetic/share/rqt_dep/plugin.xml, /opt/ros/noetic/share/rqt_gui_cpp/plugin.xml
+8673899283335950835\discovery_data\qt_gui_cpp.RosPluginlibPluginProvider\rqt_gui%20rqt_gui_cpp%3A%3APlugin=/opt/ros/noetic/share/rqt_plot/plugin.xml, /opt/ros/noetic/share/rqt_logger_level/plugin.xml, /opt/ros/noetic/share/rqt_runtime_monitor/plugin.xml, /opt/ros/noetic/share/rqt_bag/plugin.xml, /opt/ros/noetic/share/rqt_launch/plugin.xml, /opt/ros/noetic/share/rqt_msg/plugin.xml, /opt/ros/noetic/share/rqt_moveit/plugin.xml, /opt/ros/noetic/share/rqt_gui_py/plugin.xml, /opt/ros/noetic/share/rqt_rviz/plugin.xml, /opt/ros/noetic/share/rqt_top/plugin.xml, /opt/ros/noetic/share/rqt_service_caller/plugin.xml, /opt/ros/noetic/share/rqt_robot_monitor/plugin.xml, /opt/ros/noetic/share/rqt_nav_view/plugin.xml, /opt/ros/noetic/share/rqt_topic/plugin.xml, /opt/ros/noetic/share/rqt_console/plugin.xml, /opt/ros/noetic/share/rqt_publisher/plugin.xml, /opt/ros/noetic/share/rqt_image_view/plugin.xml, /opt/ros/noetic/share/rqt_srv/plugin.xml, /opt/ros/noetic/share/rqt_reconfigure/plugin.xml, /opt/ros/noetic/share/rqt_graph/plugin.xml, /opt/ros/noetic/share/rqt_robot_steering/plugin.xml, /opt/ros/noetic/share/rqt_tf_tree/plugin.xml, /opt/ros/noetic/share/rqt_pose_view/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\qt_gui_cpp=/opt/ros/noetic/share/qt_gui_cpp/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\rqt_dep=/opt/ros/noetic/share/rqt_dep/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\rqt_gui_cpp=/opt/ros/noetic/share/rqt_gui_cpp/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\rqt_py_console=/opt/ros/noetic/share/rqt_py_console/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\rqt_shell=/opt/ros/noetic/share/rqt_shell/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\qt_gui\rqt_web=/opt/ros/noetic/share/rqt_web/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_action=/opt/ros/noetic/share/rqt_action/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_bag=/opt/ros/noetic/share/rqt_bag/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_console=/opt/ros/noetic/share/rqt_console/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_graph=/opt/ros/noetic/share/rqt_graph/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_gui_py=/opt/ros/noetic/share/rqt_gui_py/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_image_view=/opt/ros/noetic/share/rqt_image_view/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_launch=/opt/ros/noetic/share/rqt_launch/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_logger_level=/opt/ros/noetic/share/rqt_logger_level/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_moveit=/opt/ros/noetic/share/rqt_moveit/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_msg=/opt/ros/noetic/share/rqt_msg/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_nav_view=/opt/ros/noetic/share/rqt_nav_view/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_plot=/opt/ros/noetic/share/rqt_plot/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_pose_view=/opt/ros/noetic/share/rqt_pose_view/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_publisher=/opt/ros/noetic/share/rqt_publisher/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_reconfigure=/opt/ros/noetic/share/rqt_reconfigure/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_robot_monitor=/opt/ros/noetic/share/rqt_robot_monitor/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_robot_steering=/opt/ros/noetic/share/rqt_robot_steering/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_runtime_monitor=/opt/ros/noetic/share/rqt_runtime_monitor/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_rviz=/opt/ros/noetic/share/rqt_rviz/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_service_caller=/opt/ros/noetic/share/rqt_service_caller/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_srv=/opt/ros/noetic/share/rqt_srv/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_tf_tree=/opt/ros/noetic/share/rqt_tf_tree/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_top=/opt/ros/noetic/share/rqt_top/plugin.xml
+8673899283335950835\discovery_data\rqt_gui.RospkgPluginProvider\rqt_gui\rqt_topic=/opt/ros/noetic/share/rqt_topic/plugin.xml
+8673899283335950835\discovery_timestamp=1752150137.22265
